# os-autoinst-scripts

./: .gitignore  .mergify.yml  AGENTS.md  Makefile  README.md  _common  backlog-set-due-date  check-netbox-machine-state.py  check-netbox-unused-machine-power.py  dependencies.yaml  monitor-openqa_job  obs-check-package-origin  openqa-advanced-retrigger-jobs  openqa-bats-review  openqa-get-job-runtime-stats  openqa-get-qem-bot-blocking-jobs  openqa-investigate  openqa-investigate-multi  openqa-label-known-issues  openqa-label-known-issues-and-investigate-hook  openqa-label-known-issues-hook  openqa-label-known-issues-multi  openqa-list-incidents  openqa-llm-investigate  openqa-post-similarity  openqa-powermanagement.py  openqa-query-for-job-label  openqa-schedule-mm-ping-test  openqa-search-maintenance-core-jobs  openqa-trigger-bisect-jobs  openqa-update-cert-from-obs  os-autoinst-obs-auto-submit  os-autoinst-testapi-usage  progress-reopen-openqa-review-reminded-tickets  pyproject.toml  rotate-gitlab-token.py  s390x-qemu-zombie-reaper.py  trigger-openqa_in_openqa  trigger-pflash-test
.github/: dependabot.yml
.github/workflows/: backlog.yml  ci.yml  obs-list-dependencies.yml  schedule.yml
.obs/: workflows.yml
actions/clone-job/: action.yaml
config/obs-certs/: factory-staging.conf  suse-unsupported.conf
ipxe/: build.sh  menu.ipxe
racktables/: get_unused_machines.py  racktables.py
src/os_autoinst_scripts/: chat_notify.py  reboot_stability_check.py
systemd/user/: os-autoinst-scripts-update-cert-from-obs@.service  os-autoinst-scripts-update-factory-staging-cert.timer  os-autoinst-scripts-update-suse-unsupported-cert.timer
test/: 01-label-known-issues.t  02-investigate.t  03-openqa-label-known-issues-and-investigate-hook.t  04-common.t  07-openqa-label-known-issues.t  08-auto-submit.t  09-logging.t  init
tests/: __init__.py  test_auto_submit.py  test_chat_notify.py  test_monitor_openqa_job.py  test_openqa-bats-review.py  test_openqa_bats_review.py  test_openqa_get_qem_bot_blocking_jobs.py  test_openqa_label_known_issues.py  test_openqa_llm_investigate.py  test_openqa_update_cert_from_obs.py  test_reboot_stability_check.py  test_s390x_qemu_zombie_reaper.py  test_trigger_bisect_jobs.py
