[project]
name = "os-autoinst-scripts"
dynamic = ["version"]
description = ""
readme = "Readme.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "SUSE LLC" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests",
    "sh",
    "beautifulsoup4",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "coverage",
    "ruff",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 120

ignore = [
    "D100",   # missing-module-docstring
    "D101",   # missing-class-docstring
    "D102",   # missing-method-docstring
    "D103",   # missing-function-docstring
    "D104",   # missing-package-docstring
    "D105",   # missing-magic-method-docstring
    "D107",   # missing-init-docstring
    "D203",   # incorrect-blank-line-before-class
    "N801",   # invalid-class-name
    "N802",   # invalid-function-name
    "N803",   # invalid-argument-name
    "N806",   # invalid-variable-name
    "UP032",
    "PLC0415", # import-outside-toplevel
    "PLC1802", # use-implicit-booleaness-not-len
    "F821",
    "PLR0912", # too-many-branches
    "PLR0913", # too-many-arguments
    "PLR0914", # too-many-locals
    "PLR0915", # too-many-statements
    "PLR2004", # magic-value-comparison
    "D213", # multi-line-summary-second-line
    "PLW2901", # redefined-loop-name
    "PLW0127", # self-assigning-variable
    "PLW0128", # redeclared-assigned-name
    "PLW0129", # assert-on-string-literal
    "B019",
    "ANN401", # any-type
    "S101",
    "PLR6301", # no-self-use
    "PLC1901", # compare-to-empty-string
    "DOC201", # docstring-missing-returns
    "DOC501", # docstring-missing-exception
    "COM812", # missing-trailing-comma
    "TC001", # typing-only-first-party-import
    "TC002", # typing-only-third-party-import
    "TC003", # typing-only-standard-library-import
    "FURB140", # reimplemented-starmap: less efficient than comprehensions https://github.com/astral-sh/ruff/issues/7771
]

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true

[tool.ruff.lint.flake8-copyright]
author = "SUSE LLC"
notice-rgx = "Copyright"
